--- a/web/web.csproj
+++ b/web/web.csproj
@@ -230,6 +230,7 @@
       <DependentUpon>SharePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\UserRegModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QCH_Activity\ActivityAddOrModify.aspx.cs">
       <DependentUpon>ActivityAddOrModify.aspx</DependentUpon>
@@ -746,6 +747,7 @@
     <Content Include="Content\image\ad_login\or.png" />
     <Content Include="Content\image\api-qr2.png" />
     <Content Include="Content\image\autonavi.png" />
+    <Content Include="Content\image\banner_2.jpg" />
     <Content Include="Content\image\captcha.jpg" />
     <Content Include="Content\image\check_yes.png" />
     <Content Include="Content\image\date_icon.png" />
@@ -764,6 +766,7 @@
     <Content Include="Content\image\index\banner\banner_1.jpg" />
     <Content Include="Content\image\index\banner\banner_2.jpg" />
     <Content Include="Content\image\index\banner\banner_3.jpg" />
+    <Content Include="Content\image\index\banner_2.jpg" />
     <Content Include="Content\image\index\car.png" />
     <Content Include="Content\image\index\chaguan.png" />
     <Content Include="Content\image\index\erweima.png" />
@@ -982,6 +985,7 @@
     <Content Include="H5\css\page4.css" />
     <Content Include="H5\css\page5.css" />
     <Content Include="H5\css\public.css" />
+    <Content Include="H5\css\register.css" />
     <Content Include="H5\css\shareCourse.css" />
     <Content Include="H5\css\shareTutor.css" />
     <Content Include="H5\css\signUp.css" />
@@ -989,8 +993,11 @@
     <Content Include="H5\css\signUpList.css" />
     <Content Include="H5\img\1459518578095.png" />
     <Content Include="H5\img\avator.png" />
+    <Content Include="H5\img\bg_down.jpg" />
     <Content Include="H5\img\car.jpg" />
     <Content Include="H5\img\crowdfunding_banner.jpg" />
+    <Content Include="H5\img\denglu_mm_img%402x.png" />
+    <Content Include="H5\img\denglu_sj_img%402x.png" />
     <Content Include="H5\img\ditiao.png" />
     <Content Include="H5\img\error.png" />
     <Content Include="H5\img\face.jpg" />
@@ -1053,6 +1060,7 @@
     <Content Include="H5\img\xf_bian_03_n2.png" />
     <Content Include="H5\img\xia.png" />
     <Content Include="H5\img\xian_cd.png" />
+    <Content Include="H5\img\xiazai_btn%402x.png" />
     <Content Include="H5\img\xuXian_2.png" />
     <Content Include="H5\img\yin_414.gif" />
     <Content Include="H5\img\yuan.png" />
@@ -1063,6 +1071,7 @@
     <Content Include="H5\js\jquery.min.js" />
     <Content Include="H5\js\lib.pincolor.min.js" />
     <Content Include="H5\js\loader.js" />
+    <Content Include="H5\js\register.js" />
     <Content Include="H5\js\shareCourse.js" />
     <Content Include="H5\js\shareTutor.js" />
     <Content Include="H5\js\signUp2.js" />
@@ -1194,6 +1203,7 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Views\App\appDown.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -1271,6 +1281,7 @@
     <Content Include="Views\App\Index.cshtml" />
     <Content Include="Views\Order\CreateOrder.cshtml" />
     <Content Include="Views\Order\PayRequest.cshtml" />
+    <Content Include="Views\wxUser\Reg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AppDown\unpackage\" />
