--- a/web/web.csproj
+++ b/web/web.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\AppController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InvitationController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\TenPayV3Controller.cs" />
     <Compile Include="Controllers\WeixinController.cs" />
@@ -221,13 +222,6 @@
     <Compile Include="Filters\WxAuthorization.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="H5\SharePage.aspx.cs">
-      <DependentUpon>SharePage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="H5\SharePage.aspx.designer.cs">
-      <DependentUpon>SharePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\UserRegModel.cs" />
@@ -976,6 +970,7 @@
     <Content Include="H5\css\hasport_green.css" />
     <Content Include="H5\css\home.css" />
     <Content Include="H5\css\index.css" />
+    <Content Include="H5\css\invitation.css" />
     <Content Include="H5\css\m.common.css" />
     <Content Include="H5\css\mastert.css" />
     <Content Include="H5\css\orderPay.css" />
@@ -1019,13 +1014,16 @@
     <Content Include="H5\img\icon\heart.png" />
     <Content Include="H5\img\icon\huodong_wxz_btn%402x.png" />
     <Content Include="H5\img\icon\huodong_xz_btn%402x.png" />
+    <Content Include="H5\img\icon\imgnodata.png" />
     <Content Include="H5\img\icon\inline.png" />
+    <Content Include="H5\img\icon\logo_mob.png" />
     <Content Include="H5\img\icon\more_1.png" />
     <Content Include="H5\img\icon\paySuccess.jpg" />
     <Content Include="H5\img\icon\refresh.png" />
     <Content Include="H5\img\icon\right.png" />
     <Content Include="H5\img\icon\share.png" />
     <Content Include="H5\img\icon\slide.png" />
+    <Content Include="H5\img\icon\suibian%402x.png" />
     <Content Include="H5\img\icon\up.png" />
     <Content Include="H5\img\icon\wxzf.png" />
     <Content Include="H5\img\icon\xianchang.png" />
@@ -1039,6 +1037,18 @@
     <Content Include="H5\img\icon_right.png" />
     <Content Include="H5\img\icon_xin.png" />
     <Content Include="H5\img\icon_xing.png" />
+    <Content Include="H5\img\invitation\datu_img%402x.jpg" />
+    <Content Include="H5\img\invitation\genduo%402x.png" />
+    <Content Include="H5\img\invitation\jianjie_img%402x.png" />
+    <Content Include="H5\img\invitation\jifen_img%402x.png" />
+    <Content Include="H5\img\invitation\mingxi_ninchen_img%402x.png" />
+    <Content Include="H5\img\invitation\mingxi_yaoqingjiangli_img%402x.png" />
+    <Content Include="H5\img\invitation\mingxi_yaoqingrenshu_img%402x.png" />
+    <Content Include="H5\img\invitation\mingxi_zhanghao_img%402x.png" />
+    <Content Include="H5\img\invitation\mingxi_zhuceshijian_img%402x.png" />
+    <Content Include="H5\img\invitation\shuangjiantou%402x.png" />
+    <Content Include="H5\img\invitation\wode_yaoqingyoujiang_img%402x.png" />
+    <Content Include="H5\img\invitation\zhijie_img%402x.png" />
     <Content Include="H5\img\juan_11.png" />
     <Content Include="H5\img\juan_21.png" />
     <Content Include="H5\img\line.png" />
@@ -1064,6 +1074,9 @@
     <Content Include="H5\img\xuXian_2.png" />
     <Content Include="H5\img\yin_414.gif" />
     <Content Include="H5\img\yuan.png" />
+    <Content Include="H5\invitation.html" />
+    <Content Include="H5\invitationInfo.html" />
+    <Content Include="H5\invitationList.html" />
     <Content Include="H5\js\artTemplate.js" />
     <Content Include="H5\js\html2canvas.js" />
     <Content Include="H5\js\int.js" />
@@ -1083,7 +1096,6 @@
     <Content Include="H5\ShareCourse.html" />
     <Content Include="H5\ShareCrowdfunding.html" />
     <Content Include="H5\ShareInvestPlace.html" />
-    <Content Include="H5\SharePage.aspx" />
     <Content Include="H5\ShareProject.html" />
     <Content Include="H5\ShareTopic.html" />
     <Content Include="H5\ShareTutor.html" />
@@ -1282,6 +1294,11 @@
     <Content Include="Views\Order\CreateOrder.cshtml" />
     <Content Include="Views\Order\PayRequest.cshtml" />
     <Content Include="Views\wxUser\Reg.cshtml" />
+    <Content Include="Views\wxUser\wxReg.cshtml" />
+    <Content Include="Views\Invitation\Index.cshtml" />
+    <Content Include="Views\Invitation\List.cshtml" />
+    <Content Include="Views\Invitation\List1.cshtml" />
+    <Content Include="Views\Invitation\Inof.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AppDown\unpackage\" />
