--- a/web/Web.config
+++ b/web/Web.config
@@ -27,6 +27,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
+    <!-- 开放平台key -->
     <add key="kfAppID" value="wx05d5bfafbbc45e6c" />
     <add key="kfAppSecret" value="36a5e818f7f8512ba18ab4d0f0d671e6" />
     
@@ -37,15 +38,20 @@
     <add key="WeixinPay_AppKey" value="0121ebe5dfbae6198ecf13b42bd0d913" />
     <add key="WeixinPay_TenpayNotify" value="http://test.cn-qch.com/TenPayV3/PayNotifyUrl" />
 
+    <!-- 微信支付商户key -->
     <add key="TenPayV3_MchId" value="1284975001" />
     <add key="TenPayV3_Key" value="6qingchuanghuiqingchuanghui66666" />
+    <!-- 公众平台支付key -->
     <add key="TenPayV3_AppId" value="wxcb0a85c19532ab3e" />
     <add key="TenPayV3_AppSecret" value="0121ebe5dfbae6198ecf13b42bd0d913" />
     <add key="TenPayV3_TenpayNotify" value="http://test.cn-qch.com/TenPayV3/PayNotifyUrl" />
     <add key="WeixinToken" value="0983938DUIEK388329" />
     <add key="WeixinUrl" value="http://test.cn-qch.com" />
     <add key="ImageUrl" value="http://120.25.106.244:8002/Attach/Images/"/>
-    
+    <!-- 极光推送key -->
+    <add key="ApiKey" value="c5769e566eca15eac9f5bbc3" />
+    <add key="APIMasterSecret" value="db5d2b8984d337584f343c56" />
+
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
