--- a/api/Web.config
+++ b/api/Web.config
@@ -6,16 +6,24 @@
 <configuration>
   <connectionStrings>
     <add name="cpf" connectionString="Data Source=.;Initial Catalog=cpf166;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
-    <add name="qch" connectionString="Data Source=.;Initial Catalog=DB_QCH;User ID=sa;Password=qch123456789;" providerName="System.Data.SqlClient" />
+    <add name="qch" connectionString="Data Source=120.25.106.244;Initial Catalog=DB_QCH;User ID=sa;Password=qch123456789;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="ConnectionString" value="server=.;database=DB_QCH;uid=sa;pwd=qch123456789" />
+    <!-- 连接字符串是否加密 -->
+    <add key="ConStringEncrypt" value="false" />
+    <add key="Attach" value="/Attach/Images" />
+    <!-- 数据库连接字符串,（如果采用加密方式，上面一项要设置为true；加密工具，可在官方下载，
+     		如果使用明文这样server=127.0.0.1;database=.....,上面则设置为false。 -->
+    <add key="ConnectionString" value="server=120.25.106.244;database=DB_QCH;uid=sa;pwd=qch123456789" />
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-
+    <!-- memcached缓存服务器 -->
+    <add key="Svr1" value="192.168.1.77:11211"/>
+    
     <add key="WeixinPay_Tenpay" value="WeixinPay_Tenpay" />
     <add key="WeixinPay_PartnerId" value="1284975001" />
     <add key="WeixinPay_Key" value="6qingchuanghuiqingchuanghui66666" />
