--- a/qch.Infrastructure/qch.Infrastructure.csproj
+++ b/qch.Infrastructure/qch.Infrastructure.csproj
@@ -56,7 +56,7 @@
     </Reference>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\cpf\log4net.dll</HintPath>
+      <HintPath>..\packages\qch\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.5.6\lib\net40\Newtonsoft.Json.dll</HintPath>
