空间管理完成

--- a/web/Web.config
+++ b/web/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <FtpServer>
     <ftp>
-      <add name="img1" server="192.16.1.148" port="50011" user="image1" pwd="" />
+      <add name="img1" server="120.25.106.244" port="8002" user="qchimg" pwd="qch888" />
     </ftp>
   </FtpServer>
   <connectionStrings>
